<resources>
    <string name="app_name">MyAnime ToWatchList</string>
    <string name="app_title">MyAnime List</string>
    <string name="new_anime">Novo Anime</string>
    <string name="anime_name">Nome do Anime</string>
    <string name="number_of_episodes">Numero de Episodios</string>
    <string name="start_date">Data de Inicio</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="empty_string_error">Erro: Texto vazio</string>
    <string name="edit">Editar</string>
    <string name="delete">Apagar</string>
    <string name="watched">Assistido</string>
    <string name="no_animes">Você não possui nenhum anime na lista!</string>
    <string name="closeApp">Sair</string>
</resources>